# strzelectwo-lodzkie-kalendarz-zawodow

./: .dockerignore  .gitignore  Dockerfile  README.md  pyproject.toml
src/: app.py  extract_table.py
src/static/css/: style.css
src/static/js/: calendar.js
src/templates/: index.html
