[project]
name = "strzelectwo-lodzkie-kalendarz-zawodow"
version = "0.1.0"
description = "Interactive web calendar for shooting competitions in the Łódź Voivodeship, parsed from the official PDF"
readme = "README.md"
requires-python = ">=3.9"
dependencies = [
    "flask>=3.1.3",
    "pymupdf>=1.26.5",
]
